Upgrade FlatLaf to 3.2 and get rid of l10n workaround